--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -6,10 +6,10 @@ spec:
   type: NodePort
   ports:
     - targetPort: 80
-      *port: 80
+      port: 80
       nodePort: 30005
     - targetPort: 443
-      *port: 443
+      port: 443
       nodePort: 30006
   selector:
     matchLabels:
